tests/baselines/reference/parserAccessors4(strict=true).errors.txt
parserAccessors4.ts(1,15): error TS7032: Property 'Foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserAccessors4.ts(1,19): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== parserAccessors4.ts (2 errors) ====
    var v = { set Foo(a) { } };
                  ~~~
!!! error TS7032: Property 'Foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                      ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.